<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkGray"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkGray"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scoreLayout" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkGray"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/title_one"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="@dimen/contentPadding"
        android:paddingBottom="@dimen/contentPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/contentPadding"
            android:layout_weight="1"
            android:text="@string/location"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/bodyTextSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/bodyTextSize" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/nav_size"
            android:layout_marginHorizontal="@dimen/contentPadding"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:maxWidth="130dp"
            android:onClick="GoToGisang"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gisang" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/contentPadding"
        android:paddingBottom="@dimen/contentPadding"
        app:layout_constraintTop_toBottomOf="@id/topLayout">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/total_air"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/bodyTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout" />

        <TextView
            android:id="@+id/airValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/airScore"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="60sp" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fadeScrollbars="true"
        android:scrollbarSize="2dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLayout">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:baselineAligned="false"
            android:gravity="center"
            android:paddingTop="@dimen/contentPadding"
            android:paddingBottom="@dimen/contentPadding">

            <LinearLayout
                android:id="@+id/emoji1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/contentPadding"
                android:layout_marginEnd="@dimen/halfPadding"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/airText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/contentPadding"
                    android:gravity="center"
                    android:text="@string/misae"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="@dimen/misaImageWidth"
                    android:layout_height="@dimen/misaImageHeight"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/good" />

                <TextView
                    android:id="@+id/value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/contentPadding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emoji2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/halfPadding"
                android:layout_marginEnd="@dimen/halfPadding"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/airText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/contentPadding"
                    android:gravity="center"
                    android:text="@string/chomisae"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="@dimen/misaImageWidth"
                    android:layout_height="@dimen/misaImageHeight"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/good" />

                <TextView
                    android:id="@+id/value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/contentPadding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emoji3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/halfPadding"
                android:layout_marginEnd="@dimen/halfPadding"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/airText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/contentPadding"
                    android:gravity="center"
                    android:text="Gas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="@dimen/misaImageWidth"
                    android:layout_height="@dimen/misaImageHeight"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/good" />

                <TextView
                    android:id="@+id/value3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/contentPadding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emoji4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/halfPadding"
                android:layout_marginEnd="@dimen/halfPadding"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/airText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/contentPadding"
                    android:gravity="center"
                    android:text="CO"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="@dimen/misaImageWidth"
                    android:layout_height="@dimen/misaImageHeight"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/good" />

                <TextView
                    android:id="@+id/value4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/contentPadding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emoji5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/halfPadding"
                android:layout_marginEnd="@dimen/contentPadding"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/airText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/contentPadding"
                    android:gravity="center"
                    android:text="메탄"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="@dimen/misaImageWidth"
                    android:layout_height="@dimen/misaImageHeight"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/good" />

                <TextView
                    android:id="@+id/value5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/contentPadding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/bodyTextSize" />

            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <View
        android:id="@+id/view11"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkGray"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/horizontalScrollView" />

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkGray"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

</android.support.constraint.ConstraintLayout>